fix toot spacing

--- a/web/source/css/status.css
+++ b/web/source/css/status.css
@@ -106,7 +106,10 @@ main {
 	}
 
 	.body {
-		padding: 0 0.75rem;
+		padding: 0.5rem 0.75rem;
+		display: flex;
+		flex-direction: column;
+		gap: 0.5rem;
 	}
 
 	details > summary {
@@ -124,7 +127,6 @@ main {
 
 	.text {
 		margin: 0;
-		padding-top: 0.5rem;
 		grid-row: span 1;
 		grid-column: 1 / span 3;
 
@@ -139,8 +141,6 @@ main {
 		}
 
 		.content {
-			padding-bottom: 0.5rem;
-
 			word-break: break-word;
 
 			blockquote {
@@ -200,7 +200,6 @@ main {
 	}
 
 	.media {
-		margin-top: 0.5rem;
 		border-radius: $br;
 		grid-column: span 3;
 		display: grid;
@@ -406,14 +405,6 @@ main {
 
 		.info {
 			background: $toot-focus-info-bg;
-		}
-
-		.not-expanded {
-			display: none;
-		}
-
-		.media {
-			margin-bottom: 0.5rem;
 		}
 	}
 }
